RA-03-отрифакторил xml,добавил binding

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,45 +9,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/size_small"
+        android:layout_marginHorizontal="@dimen/size_normal"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-
         <Button
-            android:id="@+id/button_left"
+            android:id="@+id/btnCategories"
+            style="@style/StyleNavButton"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginEnd="@dimen/margin_small"
             android:layout_weight="1"
-            android:text="@string/button_categories"
-            android:layout_gravity="center"
             android:backgroundTint="@color/button_colors_categories"
             android:gravity="center"
-            android:textColor="@color/white"
-            style="@style/StyleNavButton"
-            />
+            android:text="@string/title_categories" />
 
         <Button
+            android:id="@+id/btnFavorites"
+            style="@style/StyleNavButton"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_weight="1"
-            android:text="@string/button_favourites"
-            app:icon="@drawable/ic_heart"
-            app:iconGravity="end"
-            app:iconSize="@dimen/icon_size"
-            app:iconPadding="@dimen/padding_small"
+            android:text="@string/title_favourites"
             app:backgroundTint="@color/button_colors_favorites"
-            style="@style/StyleNavButton"
-            />
+            app:icon="@drawable/ic_heart"
+            app:iconGravity="textEnd"
+            app:iconSize="@dimen/icon_size" />
 
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
