--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="padding_small">10dp</dimen>
     <dimen name="icon_size">24sp</dimen>
     <dimen name="margin_normal">10dp</dimen>
-    <dimen name="margin_small">5dp</dimen>
+    <dimen name="margin_small">2dp</dimen>
     <dimen name="text_size_normal">14sp</dimen>
+    <dimen name="size_small">8dp</dimen>
+    <dimen name="size_normal">16dp</dimen>
+
 </resources>
