--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,19 +2,15 @@
 <resources>
 
     <style name="StyleTitle14" parent="TextAppearance.AppCompat">
-
         <item name="android:fontFamily">@font/montserrat_alternates_semi_bold</item>
         <item name="android:textSize">@dimen/text_size_normal</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/white</item>
-
     </style>
 
     <style name="StyleNavButton" parent="Widget.Material3.Button">
-
         <item name="android:textAppearance">@style/StyleTitle14</item>
-
-        <item name="cornerRadius">8dp</item>
+        <item name="cornerRadius">@dimen/size_small</item>
     </style>
 
 </resources>
