--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mainContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:backgroundTint="@color/status_bar_color"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.fragment.app.FragmentContainerView>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/size_small"
         android:layout_marginHorizontal="@dimen/size_normal"
+        android:layout_marginVertical="@dimen/size_small"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainContainer"
+        app:backgroundTint="@color/status_bar_color">
 
         <Button
             android:id="@+id/btnCategories"
@@ -24,9 +39,9 @@
             android:layout_gravity="center"
             android:layout_marginEnd="@dimen/margin_small"
             android:layout_weight="1"
-            android:backgroundTint="@color/button_colors_categories"
             android:gravity="center"
-            android:text="@string/title_categories" />
+            android:text="@string/title_categories"
+            app:backgroundTint="@color/button_colors_categories" />
 
         <Button
             android:id="@+id/btnFavorites"
