RA-07-сверстал список категории

--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -1,14 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CategoriesListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/heading_imageView"
+            android:layout_width="match_parent"
+            android:layout_height="224dp"
+            android:scaleType="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </ImageView>
+
+        <LinearLayout
+            android:id="@+id/heading_linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/size_normal"
+            android:layout_marginBottom="@dimen/size_normal"
+            android:background="@drawable/shape_rounded_variants"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/heading_imageView"
+            app:layout_constraintStart_toStartOf="@+id/heading_imageView">
+
+            <TextView
+                android:id="@+id/heading_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/margin_normal"
+                android:fontFamily="@font/montserrat_alternates_semi_bold"
+                android:gravity="center"
+                android:text="@string/title_categories"
+                android:textAllCaps="true"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_big"
+                app:layout_constraintBottom_toBottomOf="@id/heading_linearLayout"
+                app:layout_constraintEnd_toEndOf="@id/heading_linearLayout"
+                app:layout_constraintStart_toStartOf="@id/heading_linearLayout"
+                app:layout_constraintTop_toTopOf="@id/heading_linearLayout" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCategories"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_categories" />
+        android:layout_marginVertical="@dimen/size_small"
+        android:layout_marginHorizontal="@dimen/size_small"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:itemCount="6"
+        tools:listitem="@layout/item_category">
 
-</FrameLayout>
+    </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
