--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="button_colors_favorites">#E13E3E</color>
     <color name="background_color">#F4FAFF</color>
     <color name="nav_bar_color">#F5F5F5</color>
+    <color name="text_color">#5F3678</color>
+    <color name="text_description">#666666</color>
 </resources>
