--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="text_size_normal">14sp</dimen>
     <dimen name="size_small">8dp</dimen>
     <dimen name="size_normal">16dp</dimen>
-
+    <dimen name="text_size_big">20sp</dimen>
+    <dimen name="text_size_description">12sp</dimen>
 </resources>
