RA-08-инициализировал RecyclerView

--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -18,7 +18,8 @@
             android:scaleType="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/group_4">
 
         </ImageView>
 
