--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -23,6 +23,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/image_item_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_launcher_background">
@@ -30,6 +31,7 @@
             </ImageView>
 
             <TextView
+                android:id="@+id/title_item_category"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/size_small"
@@ -43,6 +45,7 @@
             </TextView>
             
             <TextView
+                android:id="@+id/description_item_category"
                 android:layout_width="140dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="@dimen/size_small"
