--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="size_normal">16dp</dimen>
     <dimen name="text_size_big">20sp</dimen>
     <dimen name="text_size_description">12sp</dimen>
+    <dimen name="image_size_small">130dp</dimen>
+    <dimen name="image_size_normal">224dp</dimen>
 </resources>
