--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -13,14 +13,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivItemCategory"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/image_size_small"
             android:layout_marginBottom="@dimen/size_small"
             android:importantForAccessibility="no"
@@ -29,21 +26,20 @@
 
         <TextView
             android:id="@+id/tvTitleItemCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/size_small"
-            android:fontFamily="@font/montserrat_alternates_semi_bold"
-            android:gravity="start"
             style="@style/StyleTitleItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/size_small"
+            android:gravity="start"
             tools:text="Бургеры" />
 
         <TextView
             android:id="@+id/tvDescriptionItemCategory"
+            style="@style/StyleDescriptionItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_small"
             android:gravity="start"
-            style="@style/StyleDescriptionItem"
             tools:text="Рецепты всех популярных видов бургеров" />
 
     </LinearLayout>
