--- a/app/src/main/res/layout/item_recipes.xml
+++ b/app/src/main/res/layout/item_recipes.xml
@@ -2,7 +2,6 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cwItemCategory"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/size_small"
@@ -17,32 +16,21 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivItemCategory"
+            android:id="@+id/ivItemRecipes"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/image_size_small"
-            android:layout_marginBottom="@dimen/size_small"
+            android:layout_height="@dimen/image_size_very_small"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
             tools:src="@drawable/ic_launcher_background" />
 
         <TextView
-            android:id="@+id/tvTitleItemCategory"
+            android:id="@+id/tvTitleItemRecipes"
             style="@style/StyleTitleItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/size_small"
-            android:gravity="start"
-            tools:text="Бургеры" />
-
-        <TextView
-            android:id="@+id/tvDescriptionItemCategory"
-            style="@style/StyleDescriptionItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_small"
             android:gravity="start"
-            tools:text="Рецепты всех популярных видов бургеров" />
-
+            tools:text="Чизбургер" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
